--- a/css/style.css
+++ b/css/style.css
@@ -285,18 +285,128 @@ body {
   column-gap: 3rem;
 }
 
-.education {
+.education .dropdown {
+  margin-bottom: 1rem;
+  transition: all 0.2s;
+  overflow: hidden;
+  height: 6.5rem;
+}
+.education .dropdown__header {
+  border: 1px solid green;
+  font-size: 2rem;
+  padding: 0 3rem;
+  cursor: pointer;
+  height: 6.5rem;
+  transition: all 0.2s;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.education .dropdown__header .plus {
+  width: 2rem;
+  border-bottom: 2px solid currentColor;
+  position: relative;
+}
+.education .dropdown__header .plus::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  border-bottom: 2px solid currentColor;
+  transform: rotate(90deg);
+}
+.education .dropdown__text {
+  font-size: 1.8rem;
+  padding: 3rem;
+  margin-top: 0.5rem;
   border: 1px solid red;
 }
-
-.experience {
-  height: 100vh;
+.education .dropdown--large .dropdown__header {
   background-color: blue;
+  color: #fff;
+}
+.education .dropdown--large .dropdown__header .plus::after {
+  display: none;
+}
+
+.experiences .experience-container {
+  background-color: grey;
+  width: 0.5rem;
+  z-index: 1;
+}
+.experiences .experience-container .experience {
+  transform: translateX(-2.3rem);
+  position: relative;
+  width: 5rem;
+  height: 5rem;
+  border: 5px solid grey;
+  border-radius: 50%;
+  margin-bottom: 12rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  background-color: blue;
+}
+.experiences .experience-container .experience .icon {
+  width: 2rem;
+  height: 2rem;
+}
+.experiences .experience-container .experience .experience-block {
+  position: absolute;
+  background-color: grey;
+  width: 70rem;
+  top: 0;
+  left: 6rem;
+  padding: 2rem 3rem;
+}
+.experiences .experience-container .experience .experience-block::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 1rem;
+  left: -1rem;
+  width: 1rem;
+  height: 1rem;
+  background-color: grey;
+  clip-path: polygon(100% 0, 100% 100%, 0 50%);
+}
+.experiences .experience-container .experience__header {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+}
+.experiences .experience-container .experience__header span {
+  font-size: 2rem;
+}
+.experiences .experience-container .experience__text {
+  font-size: 1.8rem;
 }
 
 .projects {
-  height: 100vh;
-  background-color: red;
+  border: 1px solid red;
+}
+.projects .options {
+  display: flex;
+  flex-direction: row;
+}
+.projects .options button {
+  margin-right: 2rem;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.projects .options button:hover {
+  color: blue;
+}
+.projects .works-container .works {
+  height: 50rem;
+  width: 100%;
+  border: 1px solid red;
+}
+.projects .works-container .works-hide {
+  display: none;
 }
 
 .contact {
