--- a/sass/pages/_experience.scss
+++ b/sass/pages/_experience.scss
@@ -1,4 +1,62 @@
-.experience{
-    height: 100vh;
-    background-color: blue;
+.experiences{
+
+    .experience-container{
+        background-color: grey;
+        width: .5rem;
+        z-index: 1;
+        .experience{
+            transform: translateX(-2.3rem);
+            position: relative;
+            width: 5rem;
+            height: 5rem;
+            border: 5px solid grey;
+            border-radius: 50%;
+            margin-bottom: 12rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 2;
+            background-color: blue;
+
+
+            .icon{
+                width: 2rem;
+                height: 2rem;
+            }
+
+            .experience-block{
+                position: absolute;
+                background-color: grey;
+                width: 70rem;
+                top: 0;
+                left: 6rem;
+                padding: 2rem 3rem;
+
+                &::before{
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: 1rem;
+                    left: -1rem;
+                    width: 1rem;
+                    height: 1rem;
+                    background-color: grey;
+                    clip-path: polygon(100% 0, 100% 100%, 0 50%);
+                }
+            }
+
+            &__header{
+                font-size: 2.5rem;
+                margin-bottom: 2rem;
+
+                span{
+                    font-size: 2rem;
+                }
+            }
+
+            &__text{
+                font-size: 1.8rem;
+            }
+        }
+    }
 }
