--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,20 @@
 .nav-bar .nav-list__item:not(:last-child) {
   margin-bottom: 2rem;
 }
+.nav-bar .nav-list .nav-active {
+  color: #42a7e8;
+}
+.nav-bar .nav-list .nav-active::before {
+  content: "";
+  display: block;
+  width: 100%;
+  border-bottom: 2px solid #42a7e8;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all 0.2s;
+}
 .nav-bar .nav-foot {
   text-align: center;
   font-size: 1.6rem;
@@ -98,6 +112,11 @@
 .main > * {
   padding: 3rem;
 }
+@media only screen and (max-width: 25rem) {
+  .main > * {
+    padding: 1rem;
+  }
+}
 
 *,
 *::before,
@@ -110,6 +129,12 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  font-family: "Roboto Mono", sans-serif;
+}
+@media only screen and (max-width: 50rem) {
+  html {
+    font-size: 50%;
+  }
 }
 
 body {
@@ -119,6 +144,16 @@ body {
 
 .heading-1 {
   font-size: 5rem;
+}
+@media only screen and (max-width: 31.25rem) {
+  .heading-1 {
+    font-size: 3rem;
+  }
+}
+@media only screen and (max-width: 25rem) {
+  .heading-1 {
+    text-align: center;
+  }
 }
 
 .heading-2 {
@@ -204,6 +239,13 @@ body {
   animation-duration: 0.5s;
   animation-fill-mode: backwards;
 }
+@media only screen and (max-width: 25rem) {
+  .home .home-container {
+    padding: 2rem 0;
+    justify-content: center;
+    justify-items: center;
+  }
+}
 .home .home-container > * {
   animation-name: moveUp;
   animation-duration: 1s;
@@ -213,9 +255,20 @@ body {
   font-size: 2rem;
   animation-delay: 100ms;
 }
+@media only screen and (max-width: 25rem) {
+  .home .home-container__info {
+    text-align: center;
+    font-size: 1.5rem;
+  }
+}
 .home .home-container a {
   justify-self: start;
   animation-delay: 200ms;
+}
+@media only screen and (max-width: 25rem) {
+  .home .home-container a {
+    justify-self: center;
+  }
 }
 .home .home-container--1 {
   background-image: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(242, 242, 242, 0.7)), url("../img/bg-1.jpg");
@@ -241,6 +294,11 @@ body {
   flex-direction: column;
   justify-content: center;
   background-color: #eec280;
+}
+@media only screen and (max-width: 25rem) {
+  .about__block {
+    height: 25rem;
+  }
 }
 .about__block p {
   font-size: 2.8rem;
@@ -331,41 +389,44 @@ body {
 }
 
 .experiences .experience-container {
-  background-color: grey;
-  width: 0.5rem;
   z-index: 1;
+  display: grid;
+  grid-template-rows: repeat(3, min-content);
+  row-gap: 2rem;
+}
+.experiences .experience-container__line {
+  grid-row: 1/-1;
+  grid-column: 1/2;
+  width: 0.5rem;
+  background-color: grey;
+  margin-left: 2.3rem;
 }
 .experiences .experience-container .experience {
-  transform: translateX(-2.3rem);
   position: relative;
+  width: 100%;
+  z-index: 2;
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  column-gap: 2rem;
+}
+.experiences .experience-container .experience .icon {
   width: 5rem;
   height: 5rem;
   border: 5px solid grey;
   border-radius: 50%;
-  margin-bottom: 12rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
   background-color: blue;
 }
-.experiences .experience-container .experience .icon {
-  width: 2rem;
-  height: 2rem;
-}
 .experiences .experience-container .experience .experience-block {
-  position: absolute;
+  position: relative;
   background-color: grey;
-  width: 70rem;
-  top: 0;
-  left: 6rem;
+  width: 100%;
   padding: 2rem 3rem;
 }
 .experiences .experience-container .experience .experience-block::before {
   content: "";
   display: block;
   position: absolute;
-  top: 1rem;
+  top: 2rem;
   left: -1rem;
   width: 1rem;
   height: 1rem;
@@ -376,34 +437,175 @@ body {
   font-size: 2.5rem;
   margin-bottom: 2rem;
 }
+@media only screen and (max-width: 25rem) {
+  .experiences .experience-container .experience__header {
+    font-size: 2rem;
+  }
+}
 .experiences .experience-container .experience__header span {
   font-size: 2rem;
 }
 .experiences .experience-container .experience__text {
   font-size: 1.8rem;
 }
-
-.projects {
-  border: 1px solid red;
+@media only screen and (max-width: 25rem) {
+  .experiences .experience-container .experience__text {
+    font-size: 1.5rem;
+  }
 }
-.projects .options {
+.experiences .experience-container .experience--1 {
+  grid-row: 1/2;
+  grid-column: 1/2;
+}
+.experiences .experience-container .experience--2 {
+  grid-row: 2/3;
+  grid-column: 1/2;
+}
+.experiences .experience-container .experience--3 {
+  grid-row: 3/4;
+  grid-column: 1/2;
+}
+
+.projects .project-options {
   display: flex;
   flex-direction: row;
 }
-.projects .options button {
+.projects .project-options button {
   margin-right: 2rem;
   background-color: transparent;
   border: none;
   cursor: pointer;
   transition: all 0.2s;
 }
-.projects .options button:hover {
+.projects .project-options button:hover {
+  color: blue;
+}
+.projects .project-options .work-active {
   color: blue;
 }
 .projects .works-container .works {
-  height: 50rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  column-gap: 2rem;
+  row-gap: 4rem;
+}
+.projects .works-container .works .work .work-container {
+  position: relative;
   width: 100%;
-  border: 1px solid red;
+  height: 100%;
+}
+.projects .works-container .works .work__bg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.projects .works-container .works .work__info {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5rem;
+  background-color: rgba(128, 128, 128, 0.489);
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+@media only screen and (max-width: 25rem) {
+  .projects .works-container .works .work__info {
+    padding: 0.5rem;
+  }
+}
+.projects .works-container .works .work__info span {
+  font-size: 1.9rem;
+  color: #fff;
+  text-transform: uppercase;
+}
+@media only screen and (max-width: 25rem) {
+  .projects .works-container .works .work__info span {
+    font-size: 1.5rem;
+  }
+}
+.projects .works-container .works .work__info button {
+  border: 1px solid #fff;
+  background-color: transparent;
+  border-radius: 5px;
+  padding: 1rem 2rem;
+  color: #fff;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+@media only screen and (max-width: 25rem) {
+  .projects .works-container .works .work__info button {
+    font-size: 1.2rem;
+  }
+}
+.projects .works-container .works .work__info a {
+  font-size: 1.6rem;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bolder;
+  font-size: 2rem;
+}
+@media only screen and (max-width: 25rem) {
+  .projects .works-container .works .work__info a {
+    font-size: 1.2rem;
+  }
+}
+.projects .works-container .works .work__gallery {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 2rem;
+  background-color: rgba(0, 0, 0, 0.4823529412);
+  z-index: 10;
+}
+@media only screen and (max-width: 25rem) {
+  .projects .works-container .works .work__gallery {
+    padding: 0.5rem;
+  }
+}
+.projects .works-container .works .work__gallery .btn-gallery {
+  border: 1px solid #fff;
+  padding: 1rem 2rem;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  background-color: transparent;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  margin: 0 auto;
+  display: inline-block;
+  margin-bottom: 1rem;
+  position: absolute;
+  z-index: 2;
+}
+.projects .works-container .works .work__gallery .btn-gallery-close {
+  top: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.projects .works-container .works .work__gallery .btn-gallery-next {
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.projects .works-container .works .work__gallery img {
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 0.2s;
+  z-index: 1;
+}
+@media only screen and (max-width: 25rem) {
+  .projects .works-container .works .work__gallery img {
+    width: 95%;
+  }
 }
 .projects .works-container .works-hide {
   display: none;
@@ -427,40 +629,47 @@ body {
 .btn-nav {
   position: fixed;
   width: 5rem;
-  height: 0;
+  height: 3rem;
   z-index: 3;
-  border-bottom: 3px solid red;
-  top: 3rem;
-  left: 2rem;
+  top: 1rem;
+  left: 1rem;
   display: none;
 }
-.btn-nav::before, .btn-nav::after {
+.btn-nav__line {
+  width: 100%;
+  border-bottom: 3px solid red;
+  position: relative;
+}
+.btn-nav__line::before, .btn-nav__line::after {
   content: "";
   display: block;
   width: 100%;
   border-bottom: 3px solid red;
   position: absolute;
+  transition: all 0.2s;
 }
-.btn-nav::before {
+.btn-nav__line::before {
   top: -1rem;
 }
-.btn-nav::after {
+.btn-nav__line::after {
   top: 1rem;
 }
-.btn-nav--cross {
+.btn-nav--cross .btn-nav__line {
   border-bottom: 3px solid transparent;
 }
-.btn-nav--cross::before {
+.btn-nav--cross .btn-nav__line::before {
   top: 0;
   transform: rotate(40deg);
 }
-.btn-nav--cross::after {
+.btn-nav--cross .btn-nav__line::after {
   top: 0;
   transform: rotate(-40deg);
 }
 @media only screen and (max-width: 56.25em) {
   .btn-nav {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
 
