--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,11 @@
 html{
     font-size: 62.5%;
     box-sizing: border-box;
+    font-family: "Roboto Mono", sans-serif;
+
+    @include response(50rem){
+        font-size: 50%;
+    }
 }
 
 body{
