--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -78,6 +78,22 @@
         &__item:not(:last-child){
             margin-bottom: 2rem;
         }
+
+        .nav-active{
+            color: #42a7e8;
+
+            &::before{
+                content: "";
+                display: block;
+                width: 100%;
+                border-bottom: 2px solid #42a7e8;
+                position: absolute;
+                bottom: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                transition: all .2s;
+            }
+        }
     }
 
     .nav-foot{
