--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -20,6 +20,10 @@
         justify-content: center;
         background-color: #eec280;
 
+        @include response(25rem){
+            height: 25rem;
+        }
+
         p{
             font-size: 2.8rem;
             margin-bottom: 3rem;
