--- a/sass/pages/_experience.scss
+++ b/sass/pages/_experience.scss
@@ -1,42 +1,49 @@
 .experiences{
 
     .experience-container{
-        background-color: grey;
-        width: .5rem;
         z-index: 1;
+
+        display: grid;
+        grid-template-rows: repeat(3, min-content);
+        row-gap: 2rem;
+
+        &__line{
+            grid-row: 1 / -1;
+            grid-column: 1 / 2;
+
+            width: .5rem;
+            background-color: grey;
+            margin-left: 2.3rem;
+        }
+
         .experience{
-            transform: translateX(-2.3rem);
             position: relative;
-            width: 5rem;
-            height: 5rem;
-            border: 5px solid grey;
-            border-radius: 50%;
-            margin-bottom: 12rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            width: 100%;
             z-index: 2;
-            background-color: blue;
+            display: grid;
+            grid-template-columns: min-content 1fr;
+            column-gap: 2rem;
 
 
             .icon{
-                width: 2rem;
-                height: 2rem;
+                width: 5rem;
+                height: 5rem;
+                border: 5px solid grey;
+                border-radius: 50%;
+                background-color: blue;
             }
 
             .experience-block{
-                position: absolute;
+                position: relative;
                 background-color: grey;
-                width: 70rem;
-                top: 0;
-                left: 6rem;
+                width: 100%;
                 padding: 2rem 3rem;
 
                 &::before{
                     content: "";
                     display: block;
                     position: absolute;
-                    top: 1rem;
+                    top: 2rem;
                     left: -1rem;
                     width: 1rem;
                     height: 1rem;
@@ -49,6 +56,10 @@
                 font-size: 2.5rem;
                 margin-bottom: 2rem;
 
+                @include response(25rem){
+                    font-size: 2rem;
+                }
+
                 span{
                     font-size: 2rem;
                 }
@@ -56,6 +67,25 @@
 
             &__text{
                 font-size: 1.8rem;
+
+                @include response(25rem){
+                    font-size: 1.5rem;
+                }
+            }
+
+            &--1{
+                grid-row: 1 / 2;
+                grid-column: 1 / 2;
+            }
+
+            &--2{
+                grid-row: 2 / 3;
+                grid-column: 1 / 2;
+            }
+
+            &--3{
+                grid-row: 3 / 4;
+                grid-column: 1 / 2;
             }
         }
     }
