--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,11 @@
 $color-grey-light-1: #f2f2f2;
+$color-grey-light-2: #dfdfdf;
+$color-grey-light-3: #c5c5c5;
 
+$color-primary-1: #78afee;
+$color-primary-2: #fc4949;
+$color-primary-3: #efc14f;
+$color-primary-4: #ba4acd;
+$color-primary-5: #3c8937;
+$color-primary-6: #2e489f;
 $break-width-1: 56.25em;
