--- a/sass/base/_typhography.scss
+++ b/sass/base/_typhography.scss
@@ -14,12 +14,21 @@
     font-size: 1.5rem;
     text-transform: uppercase;
     letter-spacing: .5rem;
+    color: $color-grey-light-3;
+    transition: all .5s;
+
+    // transform: translateX(-5rem);
+    // opacity: 0;
 }
 
 .heading-3{
     font-size: 2.2rem;
     text-transform: uppercase;
     letter-spacing: .5rem;
+
+    // transition: all .5s;
+    // transform: translateX(-5rem);
+    // opacity: 0;
 }
 
 .heading-4{
