--- a/sass/components/_btn-nav.scss
+++ b/sass/components/_btn-nav.scss
@@ -9,7 +9,7 @@
 
     &__line{
         width: 100%;
-        border-bottom: 3px solid red;
+        border-bottom: 3px solid #000;
         position: relative;
 
         &::before,
@@ -17,7 +17,7 @@
             content: "";
             display: block;
             width: 100%;
-            border-bottom: 3px solid red;
+            border-bottom: 3px solid #000;
             position: absolute;
             transition: all .2s;
         }
