--- a/sass/components/_service-card.scss
+++ b/sass/components/_service-card.scss
@@ -5,7 +5,6 @@
     border-bottom: 2px solid red;
 
     &__icon{
-        border: 1px solid blue;
         background-color: grey;
         display: inline-block;
         padding: 4rem;
@@ -16,6 +15,31 @@
         svg{
             width: 3rem;
             height: 3rem;
+            fill: #fff;
+        }
+
+        &--1{
+            background-color: $color-primary-1;
+        }
+
+        &--2{
+            background-color: $color-primary-2;
+        }
+
+        &--3{
+            background-color: $color-primary-3;
+        }
+
+        &--4{
+            background-color: $color-primary-4;
+        }
+
+        &--5{
+            background-color: $color-primary-5;
+        }
+
+        &--6{
+            background-color: $color-primary-6;
         }
     }
 
