--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -18,7 +18,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background-color: #eec280;
+        background-color: $color-primary-3;
 
         @include response(25rem){
             height: 25rem;
