--- a/sass/pages/_education.scss
+++ b/sass/pages/_education.scss
@@ -7,7 +7,7 @@
         height: 6.5rem;
 
         &__header{
-            border: 1px solid green;
+            background-color: $color-grey-light-2;
             font-size: 2rem;
             padding: 0 3rem;
             cursor: pointer;
@@ -39,13 +39,13 @@
             font-size: 1.8rem;
             padding: 3rem;
             margin-top: .5rem;
-            border: 1px solid red;
+            border: 1px solid $color-grey-light-2;
         }
     }
 
     .dropdown--large{
         .dropdown__header{
-            background-color: blue;
+            background-color: $color-primary-1;
             color: #fff;
 
             .plus::after{
