--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ body {
 }
 
 .default-pos {
-  transform: translate(0, 0) !important;
+  transform: none !important;
   opacity: 1 !important;
 }
 
